--- a/login.html
+++ b/login.html
@@ -41,6 +41,6 @@
        </section>
         
     </div>
-    <script src="./JavaScript/pass sohw-hide.js"></script>
+    <script src="pass_sohw_hide.js"></script>
 </body>
 </html>
