--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
        </section>
         
     </div>
-    <script src="pass_sohw_hide.js"></script>
+    <script src="passsohwhide.js"></script>
 </body>
 </html>
